--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,12 +18,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <!--CSS-->
-    <link rel="stylesheet" href="../assets/ccs/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <!--Body-->
 
-<body class="fondo-claro">
+<body class="bg-custom-light">
 
     <!--Header-->
 
@@ -62,40 +62,40 @@
             <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
                 <div>
                     <h1 class="text-center">¿Qué nos diferencia?</h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut lab.</p>
+                    <p class="text-center">Ofrecemos un servicio inmobiliario integral que cubre todas tus necesidades, nos especializamos en ayudar a nuestros clientes a encontrar el espacio perfecto, ya sea para vivir o para su negocio. Desde la comercialización hasta el mantenimiento y la gestión, cada detalle es atendido por un equipo de expertos comprometidos con brindarte soluciones personalizadas y de calidad.</p>
                 </div>
             </div>
             <!-- Columna 2: Caracteristicas -->
             <div class="col-12 col-md-6">
                 <div class="mb-4">
-                    <h3 class="text-center">Customer Support</h3>
-                    <p class="text-center">Aliquam erat volutpat. Integer malesuada turpis id fringilla suscipit. Maecenas ultrices.</p>
+                    <img src="../assets/img/young-happy-couple-came-agreement-with-their-insurance-agent-focus-is-man-shaking-hands-with-agent.jpg" alt="Atención Personalizada" class="img-fluid w-50 d-block mx-auto mb-3">
+                    <h3 class="text-center">Atención Personalizada</h3>
+                    <p class="text-center">Ano solo vendemos o alquilamos propiedades, sino que ofrecemos un servicio completamente adaptado a las necesidades de cada cliente. Nos tomamos el tiempo para entender tus objetivos y así ofrecerte las mejores opciones, con un enfoque cercano y constante.</p>
                 </div>
                 <div class="mb-4">
-                    <h3 class="text-center">Best Price Guarantted</h3>
-                    <p class="text-center">Aliquam erat volutpat. Integer malesuada turpis id fringilla suscipit. Maecenas ultrices.</p>
+                    <img src="../assets/img/happy-real-estate-agent-having-meeting-with-young-couple-pointing-place-signature-their-contract.jpg" alt="Experiencia Local" class="img-fluid w-50 d-block mx-auto mb-3">
+                    <h3 class="text-center">Experiencia Local</h3>
+                    <p class="text-center">Con más de 20 años en el mercado de Caracas, conocemos a fondo la ciudad, sus zonas y las tendencias del mercado inmobiliario. Esto nos permite ofrecer un asesoramiento altamente cualificado y encontrar las mejores oportunidades para ti, ya sea en el sector residencial o comercial.</p>
                 </div>
                 <div>
-                    <h3 class="text-center">Many Location</h3>
-                    <p class="text-center">Aliquam erat volutpat. Integer malesuada turpis id fringilla suscipit. Maecenas ultrices.</p>
+                    <img src="../assets/img/handshake-business-men-concept.jpg" alt="Compromiso con la Calidad" class="img-fluid w-50 d-block mx-auto mb-3">
+                    <h3 class="text-center">Compromiso con la Calidad</h3>
+                    <p class="text-center">No solo nos enfocamos en cumplir con los estándares, sino en superarlos. Ya sea en la comercialización, mantenimiento o gestión de propiedades, nos aseguramos de que cada detalle esté cuidado, para ofrecerte un servicio impecable que garantice tu satisfacción a largo plazo.</p>
                 </div>
             </div>
         </div>
 
-        <div class="d-flex justify-content-center align-items-center text-center p-5 fondo-oscuro">
-            <p class="text-white">Lovem sum is simply dummy text of the printing and typesetting ever since the
-                1500s,
-                when an unknown printer took a galley of type</p>
+        <div class="d-flex justify-content-center align-items-center text-center p-5 bg-custom-dark">
+            <p class="text-white">Conoce a nuestro Equipo</p>
         </div>
 
     </main>
 
-    <!-- Footer -->
-    <footer class="container-fluid text-white py-4">
+     <!-- Footer -->
+     <footer class="container-fluid py-4 bg-custom-dark">
         <div class="container-fluid text-center">
             <img src="../assets/img/logo-blanco-transparente.png" alt="logo" height="50">
-            <p class="mt-2">Our vision is to provide convenience and help increase your sales business.</p>
+            <p class="mt-2">Nuestra Misión es Servirles.</p>
             <hr class="my-3">
             <p>&copy; 2025 Alma House Services. Todos los derechos reservados.</p>
         </div>
