--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <!--CSS-->
-    <link rel="stylesheet" href="./assets/ccs/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <!-- Body -->
 
-<body class="fondo-claro">
+<body class="bg-custom-light">
 
     <!--Header-->
 
@@ -63,7 +63,7 @@
             <!-- Columna 1: Texto principal -->
             <div class="col-md-12 text-center">
                 <h1 class="fw-bold">Inmobiliaria Alma House Services</h1>
-                <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class="lead">"Una Casa con ALMA... Es un Hogar".</p>
             </div>
 
             <!-- Imagen Principal -->
@@ -96,10 +96,10 @@
 
 
     <!-- Footer -->
-    <footer class="container-fluid text-white py-4">
+    <footer class="container-fluid py-4 bg-custom-dark">
         <div class="container-fluid text-center">
             <img src="./assets/img/logo-blanco-transparente.png" alt="logo" height="50">
-            <p class="mt-2">Our vision is to provide convenience and help increase your sales business.</p>
+            <p class="mt-2">Nuestra Misión es Servirles.</p>
             <hr class="my-3">
             <p>&copy; 2025 Alma House Services. Todos los derechos reservados.</p>
         </div>
