--- a/pages/alma-blog.html
+++ b/pages/alma-blog.html
@@ -18,7 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <!--CSS-->
-    <link rel="stylesheet" href="../assets/ccs/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <!--Body-->
@@ -99,10 +99,10 @@
     </main>
 
     <!-- Footer -->
-    <footer class="container-fluid text-white py-4">
+    <footer class="container-fluid py-4 bg-custom-dark">
         <div class="container-fluid text-center">
             <img src="../assets/img/logo-blanco-transparente.png" alt="logo" height="50">
-            <p class="mt-2">Our vision is to provide convenience and help increase your sales business.</p>
+            <p class="mt-2">Nuestra Misión es Servirles.</p>
             <hr class="my-3">
             <p>&copy; 2025 Alma House Services. Todos los derechos reservados.</p>
         </div>
