--- a/pages/propiedades.html
+++ b/pages/propiedades.html
@@ -18,7 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <!--CSS-->
-    <link rel="stylesheet" href="../assets/ccs/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <!--Body-->
@@ -61,40 +61,43 @@
         <div class="img-fondo-propiedades text-center">
             <div>
                 <h1>Consigue tu lugar</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+                <p>Accede acá a nuestro buscador de propiedades</p>
+                <a href="https://www.almahouservices.com" target="_blank" class="btn-dark">Buscar</a>
+
+
             </div>
         </div>
 
         <div class="text-center py-5">
-            <h2 class="mb-5">Happy Customer</h2>
+            <h2 class="mb-5">Lo que dicen nuestros clientes</h2>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-4 mb-4">
                     <div class="opinion-card">
-                        <p><strong>Viezh Robert</strong></p>
-                        <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                        <p><strong>Juan Pérez</strong></p>
+                        <p>"Gracias a AlmaHouse, encontré la oficina perfecta para mi negocio. El proceso fue rápido y la atención fue de primer nivel. Sin duda, son los mejores en lo que hacen."</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="opinion-card">
-                        <p><strong>Viezh Robert</strong></p>
-                        <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                        <p><strong>María González</strong></p>
+                        <p> "Mi experiencia con @almahouse fue excelente. Me ayudaron a encontrar una propiedad que se ajustaba exactamente a lo que buscaba, y todo el proceso de compra fue transparente y sin complicaciones."</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="opinion-card">
-                        <p><strong>Viezh Robert</strong></p>
-                        <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                        <p><strong>Carlos Rodríguez </strong></p>
+                        <p>"Desde que confié en @almahouse para alquilar mi oficina, pude ver el valor de su atención personalizada. Estuvieron pendientes de cada detalle y me ayudaron a tomar las mejores decisiones."</p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="container-fluid text-white py-4">
+    < <!-- Footer -->
+    <footer class="container-fluid py-4 bg-custom-dark">
         <div class="container-fluid text-center">
             <img src="../assets/img/logo-blanco-transparente.png" alt="logo" height="50">
-            <p class="mt-2">Our vision is to provide convenience and help increase your sales business.</p>
+            <p class="mt-2">Nuestra Misión es Servirles.</p>
             <hr class="my-3">
             <p>&copy; 2025 Alma House Services. Todos los derechos reservados.</p>
         </div>
