Etiquetas meta pasa SEO

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>almahouse</title>
+
+    <!-- Meta SEO -->
+    <meta name="description" content="Inmobiliaria en Caracas especializada en venta y alquiler de propiedades residenciales y comerciales. Atención profesional y personalizada.">
+    <meta name="keywords" content="Inmobiliaria, Caracas, oficinas, propiedades, bienes raíces, alquiler, venta">
+    <meta name="author" content="Alma House Services">
+    <title>Inicio - Alma House Services</title>
 
     <!--Favicon-->
     <link rel="shortcut icon" href="./assets/img/logo-fondo-verde.jpg" type="image/x-icon" />
