--- a/pages/alma-blog.html
+++ b/pages/alma-blog.html
@@ -6,7 +6,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>almahouse</title>
+
+    <!-- Meta SEO -->
+    <meta name="description" content="Lee nuestros consejos inmobiliarios, noticias del sector y más en nuestro AlmaBlog.">
+    <meta name="keywords" content="blog inmobiliario, noticias inmobiliarias, consejos de compra">
+    <meta name="author" content="Alma House Services">
+    <title>AlmaBlog - Alma House</title>
 
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/img/logo-fondo-verde.jpg" type="image/x-icon" />
