--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>almahouse</title>
+
+    <!-- Meta SEO -->
+    <meta name="description" content="¿Tienes dudas o quieres contactarnos? Encuentra aquí nuestros datos de contacto y redes sociales.">
+    <meta name="keywords" content="contacto inmobiliaria, Alma House Caracas, atención al cliente">
+    <meta name="author" content="Alma House Services">
+    <title>Contacto - Alma House</title>
 
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/img/logo-fondo-verde.jpg" type="image/x-icon" />
@@ -68,7 +73,7 @@
 
                     <h4>+58 424 158 58 94</h4>
                     <h4>info@almahouse.com.ve</h4>
-                    
+
                     <h6>Síguenos</h6>
                     <div class="social-icons">
                         <a href="#" class="me-3" target="_blank">
@@ -86,7 +91,7 @@
 
             <!-- Columna 2: Formulario de contacto -->
             <div class="col-12 col-md-6">
-                
+
                 <form action="#" method="POST">
                     <div class="mb-3">
                         <input type="text" class="form-control" id="name" placeholder="Tu nombre">
@@ -113,8 +118,8 @@
 
 
 
-     <!-- Footer -->
-     <footer class="container-fluid py-4 bg-custom-dark">
+    <!-- Footer -->
+    <footer class="container-fluid py-4 bg-custom-dark">
         <div class="container-fluid text-center">
             <img src="../assets/img/logo-blanco-transparente.png" alt="logo" height="50">
             <p class="mt-2">Nuestra Misión es Servirles.</p>
