--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,7 +6,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>almahouse</title>
+    
+    <!-- Meta SEO -->
+    <meta name="description" content="Descubre quiénes somos, nuestra historia, misión, visión y el equipo humano detrás de Alma House Services.">
+    <meta name="keywords" content="nosotros, equipo inmobiliaria, historia Alma House">
+    <meta name="author" content="Alma House Services">
+    <title>Nosotros - Alma House</title>
 
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/img/logo-fondo-verde.jpg" type="image/x-icon" />
