--- a/pages/propiedades.html
+++ b/pages/propiedades.html
@@ -6,7 +6,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>almahouse</title>
+    
+    <!-- Meta SEO -->
+    <meta name="description" content="Explora nuestras propiedades disponibles en Caracas: oficinas, apartamentos, locales y más.">
+    <meta name="keywords" content="propiedades Caracas, oficinas en alquiler, casas en venta, Alma House">
+    <meta name="author" content="Alma House Services">
+    <title>Propiedades - Alma House</title>
 
     <!--Favicon-->
     <link rel="shortcut icon" href="../assets/img/logo-fondo-verde.jpg" type="image/x-icon" />
